Fixed dark mode button styling
I did reverse the icon state compared to previously but I feel like it makes more sense this way.

--- a/src/components/dark-light-button/dark-light-button.module.scss
+++ b/src/components/dark-light-button/dark-light-button.module.scss
@@ -3,6 +3,7 @@
   height: 40px;
   width: 40px;
   padding: 0 !important;
+  margin-left: auto; //make sure the button stays on the far right even on the homepage
 }
 
 .dark-light-btn svg {
