--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -14,5 +14,8 @@
   max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
